update - 패키지명 변경 asyncmongodb2 - git 변경 npm 업데이트용 - conntect option 주기 추가(useUnifiedTopology : true ) 옵션 줄수 있게 - readme 변경 - test 변경

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "asyncmongodb",
-  "version": "1.4.1",
+  "name": "asyncmongodb2",
+  "version": "1.4.2",
   "description": "Easiest module to connect to mongodb by promise or async/await",
   "main": "index.js",
   "scripts": {
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/MrAbdelrahman10/asyncmongodb.git"
+    "url": "git+https://github.com/turbobit/asyncmongodb2.git"
   },
   "keywords": [
     "mongo",
@@ -18,9 +18,9 @@
   "author": "Abdelrahman Mohamed",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/MrAbdelrahman10/asyncmongodb/issues"
+    "url": "https://github.com/turbobit/asyncmongodb2/issues"
   },
-  "homepage": "https://github.com/MrAbdelrahman10/asyncmongodb#readme",
+  "homepage": "https://github.com/turbobit/asyncmongodb2#readme",
   "dependencies": {
     "mongodb": "^3.0.4"
   }
